# 11

./: 47th day：水仙花数  eighth day
Arduino/: 1st day：LED灯控制  2ed day：逻辑控制——按钮控制LED  3rd day：数字控制  4th day：LED猜数字  5th day：random() randomSeed() 电位器 analogRead()
C++/: 10th day：通讯录程序（2）  11th day：通讯录（3）删除功能完成  12th day: 删除功能优化  13th day：通讯录删除功能完善加注释  14th day：新添详情页功能与新添函数  15th day：详情页功能完善与加入部分注释，以及展示联系人功能完善  16th day：查找联系人功能（上）  17th day：通讯录完成！（注释没完成）  19th day：内存四区 new操作符  1st day：Hello world  20th day：引用 默认参数 占位参数 函数重载概述  21th day：封装 成员设置私有  22th day：对象特性  23th：深拷贝与浅拷贝 初始化列表 类对象作为类成员  24th day：静态成员 C++对象模型和this指针 常函数常对象 全局函数作友元  25th day：类作友元  成员函数作友元 加号运算符重载 左移运算符重载 自增自减运算符重载  26th day：赋值运算符重载 关系运算符重载 函数调用运算符重载  27th day：基础语法 继承方式 继承中的对象模型 继承中的构造和析构顺序 同名函数处理方式 同名静态成员处理方式  28th day：多继承语法 菱形继承  29th day：多态的基本概念 多态示例-计算器类  2ed day：命名空间  30th day：纯虚函数和抽象类 多态案例2-制作饮品 虚析构和纯虚析构 多态案例3- 电脑组装  31th day：文件操作 文本文件 二进制文件  32th day：职工管理系统（1）  33th day：职工管路系统（2）：进行到文件交互  34th day：职工管理系统（已完成）  35th day：C++提高——函数模板  36th day：函数模板与类模板  37th day：类模板  38th day：类模板  3rd day：斐波那契数列  40th day：类模板案例  41th day：vector存放内置数据类型  vector存放自定义数据类型  42th day：string基本概念 构造函数 赋值操作 字符串拼接  43th day：string查找和替换 string字符串比较 字符存取  插入和删除  44th day：string子串 vector构造函数  45th day：vector赋值操作 容量和大小 插入和删除  46th day：vector数据存取 互换容器 预留空间     deque构造函数  (+22 more)
Project/Employee Manager System/: CMakeLists.txt  main.cpp
Project/Employee Manager System/head/: boss.h  employee.h  manager.h  worker.h  workerManager.h
Project/Employee Manager System/source/: boss.cpp  employee.cpp  manager.cpp  workerManager.cpp
(+158 files in other folders)
